tests/ui/impl-trait/in-trait/check-wf-on-non-defaulted-rpitit.stderr
error[E0277]: `impl Sized` cannot be sent between threads safely
  --> $DIR/check-wf-on-non-defaulted-rpitit.rs:4:17
   |
LL |     fn bar() -> Wrapper<impl Sized>;
   |                 ^^^^^^^^^^^^^^^^^^^ `impl Sized` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `impl Sized`
note: required by a bound in `Wrapper`
  --> $DIR/check-wf-on-non-defaulted-rpitit.rs:1:19
   |
LL | struct Wrapper<G: Send>(G);
   |                   ^^^^ required by this bound in `Wrapper`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
