tests/ui/impl-trait/in-trait/check-wf-on-non-defaulted-rpitit.rs
struct Wrapper<G: Send>(G);

trait Foo {
    fn bar() -> Wrapper<impl Sized>;
    //~^ ERROR `impl Sized` cannot be sent between threads safely
}

fn main() {}
